
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LodePNGColorType ;


 unsigned int lodepng_decode_memory (unsigned char**,unsigned int*,unsigned int*,unsigned char*,size_t,int ,unsigned int) ;
 int lodepng_free (unsigned char*) ;
 unsigned int lodepng_load_file (unsigned char**,size_t*,char const*) ;

unsigned lodepng_decode_file(unsigned char** out, unsigned* w, unsigned* h, const char* filename,
                             LodePNGColorType colortype, unsigned bitdepth)
{
  unsigned char* buffer;
  size_t buffersize;
  unsigned error;
  error = lodepng_load_file(&buffer, &buffersize, filename);
  if(!error) error = lodepng_decode_memory(out, w, h, buffer, buffersize, colortype, bitdepth);
  lodepng_free(buffer);
  return error;
}
