; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_lodepng_decode_file.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_lodepng_decode_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lodepng_decode_file(i8** %0, i32* %1, i32* %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i8** %0, i8*** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = call i32 @lodepng_load_file(i8** %13, i64* %14, i8* %16)
  store i32 %17, i32* %15, align 4
  %18 = load i32, i32* %15, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %29, label %20

20:                                               ; preds = %6
  %21 = load i8**, i8*** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = load i8*, i8** %13, align 8
  %25 = load i64, i64* %14, align 8
  %26 = load i32, i32* %11, align 4
  %27 = load i32, i32* %12, align 4
  %28 = call i32 @lodepng_decode_memory(i8** %21, i32* %22, i32* %23, i8* %24, i64 %25, i32 %26, i32 %27)
  store i32 %28, i32* %15, align 4
  br label %29

29:                                               ; preds = %20, %6
  %30 = load i8*, i8** %13, align 8
  %31 = call i32 @lodepng_free(i8* %30)
  %32 = load i32, i32* %15, align 4
  ret i32 %32
}

declare dso_local i32 @lodepng_load_file(i8**, i64*, i8*) #1

declare dso_local i32 @lodepng_decode_memory(i8**, i32*, i32*, i8*, i64, i32, i32) #1

declare dso_local i32 @lodepng_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
